// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render hidden 1`] = `
<div
  className="timeInputView clear "
  id="time-input-view"
>
  <div
    className="timeInputText"
  >
    Starting Time:
  </div>
  <input
    className="timeInput"
    defaultValue="10"
    id="time-input"
    maxLength={5}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="text"
  />
</div>
`;

exports[`render not hidden 1`] = `
<div
  className="timeInputView undefined "
  id="time-input-view"
>
  <div
    className="timeInputText"
  >
    Starting Time:
  </div>
  <input
    className="timeInput"
    defaultValue="10"
    id="time-input"
    maxLength={5}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="text"
  />
</div>
`;
